testing/error/wronginitial.inp
* B BETA I II III AAA!
Hello world